complet json civi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(Render)
 
 aux_source_directory(./src SRC)
+aux_source_directory(./json JSON)
 
-add_executable(${PROJECT_NAME} ${SRC})
+add_executable(${PROJECT_NAME} ${SRC} ${JSON})
+
+set(CMAKE_CXX_FLAGS"-O2 -W")
