--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "editor.formatOnSave": false,
-    "editor.formatOnPaste": false,
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
     "editor.formatOnType": true,
     "files.associations": {
         "fstream": "cpp",
